SE 블로그 정리

--- a/_posts/SW-Engineering/2023-10-10-S.E(1).md
+++ b/_posts/SW-Engineering/2023-10-10-S.E(1).md
@@ -66,7 +66,9 @@ comments: true
 
 **소프트웨어 프로세스의 공통적인 4가지 기본사항**
 
-1. 소프트웨어 명세화 (Specification) : 고객과 개발자가 소프트웨어의 기능과 운영 제약조건을 정의
-2. 소프트웨어 개발 (Development) : 소프트웨어를 설계하고 프로그램을 작성
-3. 소프트웨어 검증 (Validation) : 소프트웨어가 고객이 요구하는 것이 맞는지 확인
-4. 소프트웨어 진화 (Evolution) : 고객과 시장의 요구에 따라 소프트웨어를 수정
+1. 소프트웨어 <u>명세화</u> (Specification) : 고객과 개발자가 소프트웨어의 기능과 운영 제약조건을 정의
+2. 소프트웨어 <u>개발</u> (Development) : 소프트웨어를 설계하고 프로그램을 작성
+3. 소프트웨어 <u>검증</u> (Validation) : 소프트웨어가 고객이 요구하는 것이 맞는지 확인
+4. 소프트웨어 <u>진화</u> (Evolution) : 고객과 시장의 요구에 따라 소프트웨어를 수정
+
+<br>
