SE 블로그 수정

--- a/_posts/SW-Engineering/2023-10-10-S.E(1).md
+++ b/_posts/SW-Engineering/2023-10-10-S.E(1).md
@@ -34,26 +34,25 @@ comments: true
 
 1. 수용성 (Acceptability)
 
-- 소프트웨어는 해당 유형의 사용자에 의해 수용될 수 있어야 한다.
-- 이해하기 쉽고, 사용하기 쉽고, 기존 시스템과 호환성 있어야 한다.
-- Understandable, Usable, Compatible
+   - 소프트웨어는 해당 유형의 사용자에 의해 수용될 수 있어야 한다.
+   - 이해하기 쉽고, 사용하기 쉽고, 기존 시스템과 호환성 있어야 한다.
+   - Understandable, Usable, Compatible
 
 2. 확실성, 보안성 (Dependability and Security)
 
-- (확실성) 시스템 장애시에 물리적 또는 경제적 손실이 없어야 한다.
-- (보안성) 악의적 사용자가 시스템에 접근하거나 피해를 줄 수 없어야 한다.
-- 신뢰성, 보안성, 안전성을 포함
-  : Reliability, Security, Safety
+   - (확실성) 시스템 장애시에 물리적 또는 경제적 손실이 없어야 한다.
+   - (보안성) 악의적 사용자가 시스템에 접근하거나 피해를 줄 수 없어야 한다.
+   - 신뢰성, 보안성, 안전성을 포함 : Reliability, Security, Safety
 
 3. 효율성 (Efficiency)
 
-- 메모리나 CPU 타임 등의 시스템 자원을 낭비해서는 안된다.
-- 응답성과 처리시간 메모리 활용 등을 포함한다.
-- Responsiveness, Processing Time, Memory Utilization
+   - 메모리나 CPU 타임 등의 시스템 자원을 낭비해서는 안된다.
+   - 응답성과 처리시간 메모리 활용 등을 포함한다.
+   - Responsiveness, Processing Time, Memory Utilization
 
 4. 유지보수성 (Maintainability)
 
-- 소프트웨어는 고객의 변경 요구에 맞도록 진화할 수 있게 작성되어야 한다.
+   - 소프트웨어는 고객의 변경 요구에 맞도록 진화할 수 있게 작성되어야 한다.
 
 <hr>
 <br>
