--- a/_posts/SW-Engineering/2023-10-10-SE(3).md
+++ b/_posts/SW-Engineering/2023-10-10-SE(3).md
@@ -26,7 +26,7 @@ comments: true
 
 <br>
 
-![Alt text](image.png)
+<img src="/assets/img/image.png"/>
 
 - 도식적인 표현을 뒷받침하기 위해 설명(UseCase Description)을 부가할 수가 있으며, 이 설명에는 쓰임새의 개요와 제약조건, 성능요건, 보안 및 배치요구사항 등이 포함
 - 각 쓰임새는 하나의 쓰임새가 다른 쓰임새를 포함할 때 스테레오 타입 <<**include**>>를 사용해서 포함관계 표현
@@ -44,7 +44,7 @@ comments: true
 
 기본 요소는 세 부분으로 나뉘며, 첫 번째는 클래스 이름, 두 번째는 속성, 마지막 칸에는 클래스의 메서드가 작성됨
 
-![Alt text](image-1.png)
+<img src="/assets/img/image-1.png"/>
 
 <br>
 <hr>
@@ -72,7 +72,7 @@ comments: true
 - 이 실행은 얇은 직사각형으로 객체의 오퍼레이션이 진행되는 시간에 따라 표시
 - 이 직사각형이 시작되는 지점에서 실행이 시작되고, 끝나는 지점에서 실행의 완료 시점 표시
 
-![Alt text](image-2.png)
+<img src="/assets/img/image-2.png"/>
 
 <br>
 <hr>
@@ -90,9 +90,8 @@ comments: true
 - 어떠한 조건이 만족되는 가에 따라 분기하고 하는 경우를 위해 의사결정이 표시되어야 하는 위치를 마름모꼴로 표시
 - 병행적으로 진행되어야 하는 활동은 두 개의 평행선 안에 활동을 명시하여 표시
 - 활동 다이어그램은 시스템에서 어떤 작업이 수행되는가를 표현하지만 작업을 수행하는 주체는 표시하지 않음
-- 주체를 표시하고자 할 때는 객체 간을 구분해주는 스윔레인(swim lane | ... | ... |)을 표시하여 어떤 활동이 어떤 객체에 의해 수행되는가를 표시
 
-![Alt text](image-3.png)
+<img src="/assets/img/image-3.png"/>
 
 <br>
 <hr>
@@ -111,7 +110,7 @@ comments: true
 - 전이 조건은 화살표 위에 표시
 - 전이의 시작은 검은 원으로 마지막은 흰 원안에 검은 원으로 표시
 
-![Alt text](image-4.png)
+<img src="/assets/img/image-4.png"/>
 
 <br>
 <hr>
@@ -125,7 +124,7 @@ comments: true
 
 - 패키지는 크고 작은 두 개의 사각형으로 표시하며, 패키지 간의 의존관계를 표시하기 위하여 점선으로 된 화살표를 사용
 
-![Alt text](image-5.png)
+<img src="/assets/img/image-5.png"/>
 
 <br>
 <hr>
@@ -141,7 +140,7 @@ comments: true
 - 물리적 장치는 육면체 노드로 표현, 내부에는 컴포넌트를 표시
 - 컴포넌트는 하나 이상의 인터페이스를 가질 수 있으며, 다이어그램을 이용하여 노드의 내부에서의 인터페이스를 표시할 수 있음
 
-![Alt text](image-6.png)
+<img src="/assets/img/image-6.png"/>
 
 <br>
 <hr>
