--- a/_posts/SW-Engineering/2023-10-10-SE(7).md
+++ b/_posts/SW-Engineering/2023-10-10-SE(7).md
@@ -10,17 +10,17 @@ permalink: categories/SW-Engineering
 ## Extream Programming
 
 [1. **The Planning Game**](the-planning-game)<br>
-[2. **Small Releases**](Small-Releases)<br>
-[3. **Metaphor**](Metaphor)<br>
-[4. **Simple Design**](Simple-Design)<br>
-[5. **Testing**](Testing)<br>
-[6. **Refactoring**](Refactoring)<br>
-[7. **Pair Programming**](Pair-Programming)<br>
-[8. **Collective Ownership**](Collective-Ownership)<br>
-[9. **Continuous Integration**](Continuous-Integration)<br>
-[10. **40-Hour Workweek**](40-Hour-Workweek)<br>
-[11. **On-site Customer**](On-site-Customer)<br>
-[12. **Coding Standards**](Coding-Standards)<br>
+[2. **Small Releases**](small-Releases)<br>
+[3. **Metaphor**](metaphor)<br>
+[4. **Simple Design**](simple-Design)<br>
+[5. **Testing**](testing)<br>
+[6. **Refactoring**](refactoring)<br>
+[7. **Pair Programming**](pair-programming)<br>
+[8. **Collective Ownership**](collective-ownership)<br>
+[9. **Continuous Integration**](continuous-integration)<br>
+[10. **40-Hour Workweek**](40-hour-workweek)<br>
+[11. **On-site Customer**](on-site-customer)<br>
+[12. **Coding Standards**](coding-standards)<br>
 
 <hr>
 
@@ -47,7 +47,7 @@ permalink: categories/SW-Engineering
 
 <hr>
 
-#The Planning Game
+##### The Planning Game
 
 ```
 업무와 개발의 책임 분리
@@ -72,7 +72,7 @@ permalink: categories/SW-Engineering
 개발자는 이전 반복을 기준으로 각 반복의 예산을 세움
 고객은 전체 견적이 그 예산을 넘지 않는 내에서 각 반복의 스토리를 선택
 반복이 시작되면 반복 동안에는 스토리 정의나 우선순위를 바꾸지 않는다고 약속
-개발자는 스토리를 자유롭게 태스크에 나눠 넣고 기술적, 업무적으로 가장 합리적인 순서로 그 태스크를 수행
+개발자는 스토리를 자유롭게 task에 나눠 넣고 기술적, 업무적으로 가장 합리적인 순서로 그 task를 수행
 ```
 
 **릴리즈 계획**
