--- a/_posts/SW-Engineering/2023-10-10-SE(7).md
+++ b/_posts/SW-Engineering/2023-10-10-SE(7).md
@@ -59,7 +59,7 @@ permalink: categories/SW-Engineering
 
 <br>
 
-#Small Releases
+###### Small Releases
 
 💡 XP 프로젝트는 개발 중인 소프트웨어를 보통 2주마다 공개한다. 각 반복마다 이해당사자의 어떤 요구를 처리하는 소프트웨어를 만든다. 그리고 각 반복의 끝마다 이해당사자의 피드백을 받기 위해 시스템을 시연한다.
 
