--- a/_posts/SW-Engineering/2023-10-10-SE(6).md
+++ b/_posts/SW-Engineering/2023-10-10-SE(6).md
@@ -30,7 +30,7 @@ permalink: categories/SW-Engineering
 
 ⭐️ 스크럼 개발 프로세스는 소프트웨어 개발보다는 팀의 개선과 프로젝트 관리를 위한 애자일 방법론으로, 경험적 관리 기법 중 하나이다. 지금까지 배운 다른 소프트웨어 개발 방법들처럼 구체적인 프로세스를 명확하게 제시하지 않는다.
 
-<img src="/assets/img/image-8.png"/>
+<img src="/Users/haeju/Desktop/had2-you.github.io/assets/img/image-8.png"/>
 
 **제품 기능 목록(product backlog) 작성**
 
