--- a/_posts/SW-Engineering/2023-10-10-SE(7).md
+++ b/_posts/SW-Engineering/2023-10-10-SE(7).md
@@ -47,7 +47,7 @@ permalink: categories/SW-Engineering
 
 <hr>
 
-##### The Planning Game
+#The Planning Game
 
 ```
 업무와 개발의 책임 분리
@@ -59,7 +59,7 @@ permalink: categories/SW-Engineering
 
 <br>
 
-###### Small Releases
+#Small Releases
 
 💡 XP 프로젝트는 개발 중인 소프트웨어를 보통 2주마다 공개한다. 각 반복마다 이해당사자의 어떤 요구를 처리하는 소프트웨어를 만든다. 그리고 각 반복의 끝마다 이해당사자의 피드백을 받기 위해 시스템을 시연한다.
 
@@ -126,6 +126,83 @@ permalink: categories/SW-Engineering
 인수 테스트가 실패하면 그 빌드는 실패를 선언
 통과하면 통과한 테스트의 본문에 추가
 인수 테스트는 하루에도 몇 번씩, 시스템을 빌드할 때마다 계속 수행
+```
+
+<br>
+
+#Refactoring
+
+```
+리팩토링은 행위에 영향을 주지 않고 시스템의 구조를 개선하는 일련의 작은 변환을 만드는 방식
+각각의 작은 변환이 끝나면 단위 테스트를 실시하여 문제 여부를 확인
+리팩토링을 통해 깔끔하고 단순하며 의미있는 코드를 유지 가능
+```
+
+<br>
+
+#Pair Programming
+
+```
+프로그래머 짝들이 함께 운영 코드를 작성
+한 멤버는 키보드를 잡고 코드 입력
+다른 멤버는 에러와 개선점을 찾음
+프로그래머 짝의 역할은 자주 바뀜
+결과물 코드는 두 멤버가 함께 설계하고 만들어낸 것
+적어도 하루에 한 번 바꿔서 모든 프로그래머가 매일 서로 다른 두 짝으로서 일할 수 있게 해야함
+한 반복 과정동안 팀의 모든 멤버는 팀의 다른 모든 멤버와 함께 일해봐야하고 그 과정에서 진행되는 모든 작업을 해봐야함
+이러한 방식으로 더 빨리 지식이 확산
+전문성을 요구하는 태스크도 짝을 이루어서 모두가 경험하게 하여 위기 상황에 대비 가능
+```
+
+<br>
+
+#Collective Ownership
+
+```
+짝은 어떤 모듈이라도 점검하고 개선할 권리를 가짐
+하나의 개별적인 모듈이나 기술에 개인적인 책임 X
+모든 팀원이 모든 부분 작업에 참여
+누구도 어떤 모듈이나 기술에 대해 다른 사람보다 더한 권한을 갖지 않음
+전문성을 부정하는 것이 아닌 전문 분야의 일에만 묶여 있지 않게 하는 것
+```
+
+<br>
+
+#Continuous Integration
+
+```
+긴 병합과정을 피해가 위해, 팀원은 모듈을 매우 빈번하게 체크인
+먼저 모든 테스트가 작동하는지 확인 → 새로운 코드를 이미 존재하는 기반 코드에 통합 → 통합 후, 통합된 새로운 시스템을 빌드하고 인수 테스트를 포함해 시스템에 있는 모든 테스트 실행 → 통과하면 체크인 완료
+XP 팀은 하루에도 여러 번, 처음부터 끝까지 전체 시스템을 빌드
+```
+
+<br>
+
+#40-Hour Workweek
+
+```
+주당 근무시간은 40시간으로 제한되어야 함
+40시간 이상의 근무를 하게되면, 효율이 떨어짐
+```
+
+<br>
+
+#On-site Customer
+
+```
+팀은 열린 공간에서 함께 일함
+문제가 생기면 누구나 그것을 인지 가능
+각 팀원은 서로의 상태를 잘 알고, 개발자들은 집중적으로 대화할 수 있는 위치에 있음
+개발 효율을 위해 고객을 프로젝트 팀원으로 상주시킴
+실제 개발 질문에 대해 빠르고 지식이 풍부한 답변을 제공
+```
+
+<br>
+
+#Coding Standards
+
+```
+소스 코드 작성 포맷과 규칙들을 표준화된 관례에 따라 작성
 ```
 
 <br>
