--- a/_posts/SW-Engineering/2023-10-10-SE(4).md
+++ b/_posts/SW-Engineering/2023-10-10-SE(4).md
@@ -114,7 +114,7 @@ permalink: categories/SW-Engineering
 
 ⭐️ 요구 추출 작업은 정보의 수집이 필요함 → 어디서 정보를 얻느냐?(출처)를 알아야 함
 
-<img src="/assets/img/image-7.png"/>
+<img src="/Users/haeju/Desktop/had2-you.github.io/assets/img/image-7.png"/>
 
 - 고객
 
